# stm32l496zg-repo-setup

./: README.md
.github/workflows/: auto-assign-pr-caller.yaml  clang-format-check-caller.yaml  pr-size-labeler-caller.yaml  release-drafter-caller.yaml  stale-caller.yaml
template/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  do-repo-setup.sh
template/.devcontainer/: Containerfile.dev.stm32  devcontainer.json
template/.github/: auto_assign_pr.yml  dependabot.yml  release-drafter.yml
template/.github/workflows/: release-drafter-caller.yaml  stale-caller.yaml
template/app/: .clang-format
template/app/src/: app.c
